# ros2_demo

./: README.md  run.sh
src/message_publisher/: CMakeLists.txt  package.xml
src/message_publisher/launch/: msgpub.launch.py
src/message_publisher/src/: main.cpp
src/message_subscriber/: CMakeLists.txt  package.xml
src/message_subscriber/launch/: msgsub.launch.py
src/message_subscriber/src/: main.cpp
